--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -56,5 +56,6 @@
   "mn21:8.1": "Immaginate che non lontano da una cittadina o un villaggio ci sia un grande bosco di alberi di Sal",
   "mn21:8.2": "strozzato da erbacce di ricino.",
   "mn21:8.3": "Poi arriva una persona che vuole aiutare a proteggere e a nutrire quel bosco.",
-  "mn21:8.4": "Taglia gli alberelli si Sal sghembi che rubano la linfa, e li butta via. Pulisce l'interno del bosco,"
+  "mn21:8.4": "Taglia gli alberelli si Sal sghembi che rubano la linfa, e li butta via. Pulisce l'interno del bosco,",
+  "mn21:8.5": "e si prende cura correttamente degli alberelli di Sal diritti e ben formati."
 }
