--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -61,5 +61,6 @@
   "mn21:8.6": "In questo modo, a tempo debito, quel bosco di Sal crescerebbe, migliorerebbe, e maturerebbe.",
   "mn21:8.7": "Allo stesso modo, mendicanti, anche voi dovete abbandonare ciò che è malsano e dedicarvi alle qualità sane.",
   "mn21:8.8": "In questo modo raggiungerete crescita, miglioramento, e maturità in questo insegnamento e addestramento.",
-  "mn21:9.1": "Una volta, mendicanti, proprio qui a Sāvatthī c’era una casalinga di nome Vedehikā."
+  "mn21:9.1": "Una volta, mendicanti, proprio qui a Sāvatthī c’era una casalinga di nome Vedehikā.",
+  "mn21:9.2": "Aveva questa buona reputazione:"
 }
