--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -66,5 +66,6 @@
   "mn21:9.3": "‘La casalinga Vedehikā è dolce, tranquilla, e calma.’",
   "mn21:9.4": "Ora, Vedehikā aveva una cameriera serva di nome Kāḷī che era abile, infaticabile, e ben organizzata nel lavoro.",
   "mn21:9.5": "Quindi Kāḷī pensò:",
-  "mn21:9.6": "‘La mia padrona ha la buona reputazione di essere"
+  "mn21:9.6": "‘La mia padrona ha la buona reputazione di essere",
+  "mn21:9.7": "dolce, tranquilla, e calma."
 }
