--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -73,5 +73,6 @@
   "mn21:9.10": "Perché non metto la mia padrona alla prova?’",
   "mn21:9.11": "Allora Kāḷī si alzò durante il giorno.",
   "mn21:9.12": "Vedehikā le disse:",
-  "mn21:9.13": "‘Che diavolo, Kāḷī!’"
+  "mn21:9.13": "‘Che diavolo, Kāḷī!’",
+  "mn21:9.14": "‘Che c’è, Signora?’"
 }
