--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -74,5 +74,6 @@
   "mn21:9.11": "Allora Kāḷī si alzò durante il giorno.",
   "mn21:9.12": "Vedehikā le disse:",
   "mn21:9.13": "‘Che diavolo, Kāḷī!’",
-  "mn21:9.14": "‘Che c’è, Signora?’"
+  "mn21:9.14": "‘Che c’è, Signora?’",
+  "mn21:9.15": "‘Ti alzi durante il giorno—cosa ti succede, ragazza?’"
 }
