--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -76,5 +76,6 @@
   "mn21:9.13": "‘Che diavolo, Kāḷī!’",
   "mn21:9.14": "‘Che c’è, Signora?’",
   "mn21:9.15": "‘Ti alzi durante il giorno—cosa ti succede, ragazza?’",
-  "mn21:9.16": "‘Niente, Signora.’"
+  "mn21:9.16": "‘Niente, Signora.’",
+  "mn21:9.17": "‘Non succede niente, cattiva ragazza, ma ti alzi durante il giorno!’ Arrabbiata e agitata si accigliò."
 }
