--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -79,5 +79,6 @@
   "mn21:9.16": "‘Niente, Signora.’",
   "mn21:9.17": "‘Non succede niente, cattiva ragazza, ma ti alzi durante il giorno!’ Arrabbiata e agitata, si accigliò.",
   "mn21:9.18": "Allora Kāḷī pensò:",
-  "mn21:9.19": "‘La mia padrona in realtà ha rabbia dentro di sé ma non lo mostra; non è che non abbia rabbia."
+  "mn21:9.19": "‘La mia padrona in realtà ha rabbia dentro di sé ma non lo mostra; non è che non abbia rabbia.",
+  "mn21:9.20": "È solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha ancora dentro di sé."
 }
