--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "an10.172:17.2": "keine harte Rede zu gebrauchen, ist ein guter Grundsatz. ",
   "an10.172:17.3": "Die vielen schlechten, untauglichen Eigenschaften, die aufgrund von harter Rede entstehen, sind schlechte Ergebnisse, ",
   "an10.172:17.4": "und die vielen tauglichen Eigenschaften, die vollständig entwickelt werden, weil man keine harte Rede gebraucht, sind gute Ergebnisse. ",
-  "an10.172:18.1": "Sinnlose Rede ist ein schlechter Grundsatz, ",
+  "an10.172:18.1": "Unsinn reden ist ein schlechter Grundsatz, ",
   "an10.172:18.2": "nicht sinnlos zu reden, ist ein guter Grundsatz. ",
   "an10.172:18.3": "Die vielen schlechten, untauglichen Eigenschaften, die aufgrund von sinnloser Rede entstehen, sind schlechte Ergebnisse, ",
   "an10.172:18.4": "und die vielen tauglichen Eigenschaften, die vollständig entwickelt werden, weil man nicht sinnlos redet, sind gute Ergebnisse. ",
