--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -83,5 +83,6 @@
   "mn21:9.20": "È solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha ancora dentro di sé.",
   "mn21:9.21": "Perché non metto la mia padrona alla prova di nuovo?’",
   "mn21:9.22": "Allora Kāḷī si alzò più tardi durante il giorno.",
-  "mn21:9.23": "Vedehikā le disse:"
+  "mn21:9.23": "Vedehikā le disse:",
+  "mn21:9.24": "‘Che diavolo, Kāḷī!’"
 }
