--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -82,7 +82,7 @@
   "mn21:9.19": "‘La mia padrona in realtà ha rabbia dentro di sé ma non lo mostra; non è che non abbia rabbia.",
   "mn21:9.20": "È solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha ancora dentro di sé.",
   "mn21:9.21": "Perché non metto la mia padrona alla prova di nuovo?’",
-  "mn21:9.22": "Allora Kāḷī si alzò più tardi durante il giorno.",
+  "mn21:9.22": "Allora Kāḷī si alzò tardi durante il giorno.",
   "mn21:9.23": "Vedehikā le disse:",
   "mn21:9.24": "‘Che diavolo, Kāḷī!’",
   "mn21:9.25": "‘Che c’è, Signora?’"
