--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -86,5 +86,6 @@
   "mn21:9.23": "Vedehikā le disse:",
   "mn21:9.24": "‘Che diavolo, Kāḷī!’",
   "mn21:9.25": "‘Che c’è, Signora?’",
-  "mn21:9.26": "‘Ti alzi tardi durante il giorno—cosa ti succede, ragazza?’"
+  "mn21:9.26": "‘Ti alzi tardi durante il giorno—cosa ti succede, ragazza?’",
+  "mn21:9.27": "‘Niente, Signora.’"
 }
