--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -89,5 +89,6 @@
   "mn21:9.26": "‘Ti alzi tardi durante il giorno—cosa ti succede, ragazza?’",
   "mn21:9.27": "‘Niente, Signora.’",
   "mn21:9.28": "‘Non succede niente, cattiva ragazza, ma ti alzi durante il giorno!’ Arrabbiata e agitata, usò parole rabbiose.",
-  "mn21:9.29": "Allora Kāḷī pensò:"
+  "mn21:9.29": "Allora Kāḷī pensò:",
+  "mn21:9.30": "‘La mia padrona in realtà ha rabbia dentro di sé ma non lo mostra; non è che non abbia rabbia."
 }
