--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -92,5 +92,6 @@
   "mn21:9.29": "Allora Kāḷī pensò:",
   "mn21:9.30": "‘La mia padrona in realtà ha rabbia dentro di sé ma non lo mostra; non è che non abbia rabbia.",
   "mn21:9.31": "È solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha ancora dentro di sé.",
-  "mn21:9.32": "Perché non metto la mia padrona alla prova di nuovo?’"
+  "mn21:9.32": "Perché non metto la mia padrona alla prova di nuovo?’",
+  "mn21:9.33": "Allora Kāḷī si alzò ancora più tardi durante il giorno."
 }
