--- a/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.172_translation-de-sabbamitta.json
@@ -66,7 +66,7 @@
   "an10.172:17.4": "und die vielen tauglichen Eigenschaften, die vollständig entwickelt werden, weil man keine harte Rede gebraucht, sind gute Ergebnisse. ",
   "an10.172:18.1": "Unsinn reden ist ein schlechter Grundsatz, ",
   "an10.172:18.2": "das Unsinnreden unterlassen ist ein guter Grundsatz. ",
-  "an10.172:18.3": "Die vielen schlechten, untauglichen Eigenschaften, die aufgrund von sinnloser Rede entstehen, sind schlechte Ergebnisse, ",
+  "an10.172:18.3": "Die vielen schlechten, untauglichen Eigenschaften, die aufgrund von Unsinnreden entstehen, sind schlechte Ergebnisse, ",
   "an10.172:18.4": "und die vielen tauglichen Eigenschaften, die vollständig entwickelt werden, weil man nicht sinnlos redet, sind gute Ergebnisse. ",
   "an10.172:19.1": "Begehrlichkeit ist ein schlechter Grundsatz, ",
   "an10.172:19.2": "Zufriedenheit ist ein guter Grundsatz. ",
