--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -102,5 +102,6 @@
   "mn21:9.39": "‘Non succede niente, cattiva ragazza, ma ti alzi ancora più tardi durante il giorno!’ Arrabbiata e agitata, prese un matterello e colpì Kāḷī sulla testa, crepandola.",
   "mn21:9.40": "Allora Kāḷī, con sangue che le colava dal cranio crepato, denunciò la propria padrona ai vicini:",
   "mn21:9.41": "‘Vedete, signore, quello che la dolce ha fatto!",
-  "mn21:9.42": "Vedete quello che la tranquilla ha fatto! Vedete quello che la calma ha fatto!"
+  "mn21:9.42": "Vedete quello che la tranquilla ha fatto! Vedete quello che la calma ha fatto!",
+  "mn21:9.43": "Come può mai prendere un matterello e colpire la propria unica cameriera in testa, crepandola, solo per essersi alzata tardi?’"
 }
