--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -103,5 +103,6 @@
   "mn21:9.40": "Allora Kāḷī, con sangue che le colava dal cranio crepato, denunciò la propria padrona ai vicini:",
   "mn21:9.41": "‘Vedete, signore, quello che la dolce ha fatto!",
   "mn21:9.42": "Vedete quello che la tranquilla ha fatto! Vedete quello che la calma ha fatto!",
-  "mn21:9.43": "Come può mai prendere un matterello e colpire la propria unica cameriera in testa, crepandola, solo per essersi alzata tardi?’"
+  "mn21:9.43": "Come può mai prendere un matterello e colpire la propria unica cameriera in testa, crepandola, solo per essersi alzata tardi?’",
+  "mn21:9.44": "Quindi dopo qualche tempo la reputazione della casalinga Vedehikā divenne cattiva:"
 }
