--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -106,5 +106,6 @@
   "mn21:9.43": "Come può mai prendere un matterello e colpire la propria unica cameriera in testa, crepandola, solo per essersi alzata tardi?’",
   "mn21:9.44": "Quindi dopo qualche tempo la reputazione della casalinga Vedehikā divenne cattiva:",
   "mn21:9.45": "‘La casalinga Vedehikā è feroce, irascibile, e per niente calma.’",
-  "mn21:10.1": "Allo stesso modo, un mendicante potrà essere il più dolce dei dolci, il più tranquillo dei tranquilli, il più calmo dei calmi, finché non incontra delle critiche spiacevoli."
+  "mn21:10.1": "Allo stesso modo, un mendicante potrà essere il più dolce dei dolci, il più tranquillo dei tranquilli, il più calmo dei calmi, finché non incontra delle critiche spiacevoli.",
+  "mn21:10.2": "Ma è quando incontra critiche spiacevoli che saprete se è davvero dolce, tranquillo, e calmo."
 }
