--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -109,5 +109,6 @@
   "mn21:10.1": "Allo stesso modo, un mendicante potrà essere il più dolce dei dolci, il più tranquillo dei tranquilli, il più calmo dei calmi, finché non incontra delle critiche spiacevoli.",
   "mn21:10.2": "Ma è quando incontra critiche spiacevoli che saprete se è davvero dolce, tranquillo, e calmo.",
   "mn21:10.3": "Non dico che un mendicante sia facile da ammonire solo se rende sé stesso facile da ammonire per amore di tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati.",
-  "mn21:10.4": "Perché questo?"
+  "mn21:10.4": "Perché questo?",
+  "mn21:10.5": "Perché appena non riceve tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati, non é più facile da ammonire."
 }
