--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -110,5 +110,6 @@
   "mn21:10.2": "Ma è quando incontra critiche spiacevoli che saprete se è davvero dolce, tranquillo, e calmo.",
   "mn21:10.3": "Non dico che un mendicante sia facile da ammonire solo se rende sé stesso facile da ammonire per amore di tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati.",
   "mn21:10.4": "Perché questo?",
-  "mn21:10.5": "Perché appena non riceve tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati, non é più facile da ammonire."
+  "mn21:10.5": "Perché appena non riceve tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati, non é più facile da ammonire.",
+  "mn21:10.6": "Ma quando un mendicante è facile da ammonire semplicemente perché onora, rispetta, riverisce, e venera l'insegnamento, allora dico sia facile da ammonire."
 }
