--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -112,5 +112,6 @@
   "mn21:10.4": "Perché questo?",
   "mn21:10.5": "Perché appena non riceve tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati, non é più facile da ammonire.",
   "mn21:10.6": "Ma quando un mendicante è facile da ammonire semplicemente perché onora, rispetta, riverisce, adora, e venera l'insegnamento, allora dico sia facile da ammonire.",
-  "mn21:10.7": "Quindi, mendicanti, dovete allenarvi così: ‘Saremo facili da ammonire semplicemente perché onoriamo, rispettiamo, riveriamo, adoriamo, e veneriamo l'insegnamento."
+  "mn21:10.7": "Quindi, mendicanti, dovete allenarvi così: ‘Saremo facili da ammonire semplicemente perché onoriamo, rispettiamo, riveriamo, adoriamo, e veneriamo l'insegnamento.",
+  "mn21:10.8": "Dovete allenarvi così."
 }
