--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -114,5 +114,6 @@
   "mn21:10.6": "Ma quando un mendicante è facile da ammonire semplicemente perché onora, rispetta, riverisce, adora, e venera l'insegnamento, allora dico sia facile da ammonire.",
   "mn21:10.7": "Quindi, mendicanti, dovete allenarvi così: ‘Saremo facili da ammonire semplicemente perché onoriamo, rispettiamo, riveriamo, adoriamo, e veneriamo l'insegnamento.",
   "mn21:10.8": "Dovete allenarvi così.",
-  "mn21:11.1": "Mendicanti, ci sono cinque modi in cui gli altri potrebbero criticarvi."
+  "mn21:11.1": "Mendicanti, ci sono cinque modi in cui gli altri potrebbero criticarvi.",
+  "mn21:11.2": "Il loro linguaggio potrà essere opportuno o inopportuno,"
 }
