--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -115,5 +115,6 @@
   "mn21:10.7": "Quindi, mendicanti, dovete allenarvi così: ‘Saremo facili da ammonire semplicemente perché onoriamo, rispettiamo, riveriamo, adoriamo, e veneriamo l'insegnamento.",
   "mn21:10.8": "Dovete allenarvi così.",
   "mn21:11.1": "Mendicanti, ci sono cinque modi in cui gli altri potrebbero criticarvi.",
-  "mn21:11.2": "Il loro linguaggio potrà essere opportuno o inopportuno,"
+  "mn21:11.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
+  "mn21:11.3": "vero o falso,"
 }
