--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -116,5 +116,6 @@
   "mn21:10.8": "Dovete allenarvi così.",
   "mn21:11.1": "Mendicanti, ci sono cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:11.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
-  "mn21:11.3": "vero o falso,"
+  "mn21:11.3": "vero o falso,",
+  "mn21:11.4": "gentile o aspro,"
 }
