--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -121,5 +121,6 @@
   "mn21:11.5": "benefico o dannoso,",
   "mn21:11.6": "da una mente di benevolenza o da odio segreto.",
   "mn21:11.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi.",
-  "mn21:11.12": "Se succede, dovete allenarvi così:"
+  "mn21:11.12": "Se succede, dovete allenarvi così:",
+  "mn21:11.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto.’"
 }
