--- a/translation/de/sabbamitta/sutta/an/an4/an4.204_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.204_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an4.204:2.2": "Da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche oder entzweiende Rede oder redet Unsinn. Und er ist begehrlich und böswillig und hat falsche Ansicht. ",
   "an4.204:2.3": "Das nennt man einen schlechten Menschen. ",
   "an4.204:3.1": "Und was ist ein schlechterer Mensch? ",
-  "an4.204:3.2": "Da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche, entzweiende, harte oder sinnlose Rede. Er ist begehrlich und böswillig und hat falsche Ansicht. Und er stiftet andere an, das Gleiche zu tun. ",
+  "an4.204:3.2": "Da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche oder entzweiende Rede oder redet Unsinn. Er ist begehrlich und böswillig und hat falsche Ansicht. Und er stiftet andere an, das Gleiche zu tun. ",
   "an4.204:3.3": " ",
   "an4.204:3.4": "Das nennt man einen schlechteren Menschen. ",
   "an4.204:4.1": "Und was ist ein guter Mensch? ",
