--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -127,5 +127,6 @@
   "mn21:11.15": "Dovete allenarvi così.",
   "mn21:12.1": "Immaginate una persona che arriva portando una vanga e un cesto",
   "mn21:12.2": "e dice:",
-  "mn21:12.3": "‘Farò sì che questa grande terra sia senza terra!’"
+  "mn21:12.3": "‘Farò sì che questa grande terra sia senza terra!’",
+  "mn21:12.4": "E scava ovunque, sparpaglia ovunque, sputa ovunque, e urina ovunque, dicendo:"
 }
