--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -128,5 +128,6 @@
   "mn21:12.1": "Immaginate una persona che arriva portando una vanga e un cesto",
   "mn21:12.2": "e dice:",
   "mn21:12.3": "‘Farò sì che questa grande terra sia senza terra!’",
-  "mn21:12.4": "E scava ovunque, sparpaglia ovunque, sputa ovunque, e urina ovunque, dicendo:"
+  "mn21:12.4": "E scava ovunque, sparpaglia ovunque, sputa ovunque, e urina ovunque, dicendo:",
+  "mn21:12.5": "‘Sii senza terra! Sii senza terra!’"
 }
