--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -129,5 +129,6 @@
   "mn21:12.2": "e dice:",
   "mn21:12.3": "‘Farò sì che questa grande terra sia senza terra!’",
   "mn21:12.4": "E scava ovunque, sparpaglia ovunque, sputa ovunque, e urina ovunque, dicendo:",
-  "mn21:12.5": "‘Sii senza terra! Sii senza terra!’"
+  "mn21:12.5": "‘Sii senza terra! Sii senza terra!’",
+  "mn21:12.6": "Cosa ne pensate, mendicanti?"
 }
