--- a/translation/de/sabbamitta/sutta/an/an4/an4.203_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.203_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an4.203:1.1": "„Mönche und Nonnen, ich werde euch lehren, was ein schlechter und was ein schlechterer Mensch ist, ",
   "an4.203:1.2": "sowie was ein guter und was ein besserer ist. ",
   "an4.203:2.1": "Und was ist ein schlechter Mensch? ",
-  "an4.203:2.2": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen und gebraucht falsche, entzweiende, harte oder sinnlose Rede. ",
+  "an4.203:2.2": "Da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche oder entzweiende Rede oder redet Unsinn. ",
   "an4.203:2.3": "Das nennt man einen schlechten Menschen. ",
   "an4.203:3.1": "Und was ist ein schlechterer Mensch? ",
   "an4.203:3.2": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen und gebraucht falsche, entzweiende, harte oder sinnlose Rede. Und er stiftet andere an, das Gleiche zu tun. ",
