--- a/translation/de/sabbamitta/sutta/an/an4/an4.203_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.203_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an4.203:2.2": "Da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche oder entzweiende Rede oder redet Unsinn. ",
   "an4.203:2.3": "Das nennt man einen schlechten Menschen. ",
   "an4.203:3.1": "Und was ist ein schlechterer Mensch? ",
-  "an4.203:3.2": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen und gebraucht falsche, entzweiende, harte oder sinnlose Rede. Und er stiftet andere an, das Gleiche zu tun. ",
+  "an4.203:3.2": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen und gebraucht falsche oder entzweiende Rede oder redet Unsinn. Und er stiftet andere an, das Gleiche zu tun. ",
   "an4.203:3.3": " ",
   "an4.203:3.4": " ",
   "an4.203:3.5": " ",
