--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -133,5 +133,6 @@
   "mn21:12.6": "Cosa ne pensate, mendicanti?",
   "mn21:12.7": "Quella persona può far sì che questa grande terra sia senza terra?”",
   "mn21:12.8": "“No, Signore.",
-  "mn21:12.9": "Perché questo?"
+  "mn21:12.9": "Perché questo?",
+  "mn21:12.10": "Perché questa grande terra è profonda e immensurabile."
 }
