--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -135,5 +135,6 @@
   "mn21:12.8": "“No, Signore.",
   "mn21:12.9": "Perché questo?",
   "mn21:12.10": "Perché questa grande terra è profonda e immensurabile.",
-  "mn21:12.11": "Non è facile renderla senza terra."
+  "mn21:12.11": "Non è facile renderla senza terra.",
+  "mn21:12.12": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
 }
