--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -136,5 +136,6 @@
   "mn21:12.9": "Perché questo?",
   "mn21:12.10": "Perché questa grande terra è profonda e immensurabile.",
   "mn21:12.11": "Non è facile renderla senza terra.",
-  "mn21:12.12": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
+  "mn21:12.12": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
+  "mn21:13.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi."
 }
