--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -138,5 +138,6 @@
   "mn21:12.11": "Non è facile renderla senza terra.",
   "mn21:12.12": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
   "mn21:13.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
-  "mn21:13.2": "Il loro linguaggio potrà essere opportuno o inopportuno,"
+  "mn21:13.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
+  "mn21:13.3": "vero o falso,"
 }
