--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -140,5 +140,6 @@
   "mn21:13.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:13.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
   "mn21:13.3": "vero o falso,",
-  "mn21:13.4": "gentile o aspro,"
+  "mn21:13.4": "gentile o aspro,",
+  "mn21:13.5": "benefico o dannoso,"
 }
