--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -143,5 +143,6 @@
   "mn21:13.4": "gentile o aspro,",
   "mn21:13.5": "benefico o dannoso,",
   "mn21:13.6": "da una mente di benevolenza o da odio segreto.",
-  "mn21:13.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi."
+  "mn21:13.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi.",
+  "mn21:13.12": "Se succede, dovete allenarvi così:"
 }
