--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -144,5 +144,6 @@
   "mn21:13.5": "benefico o dannoso,",
   "mn21:13.6": "da una mente di benevolenza o da odio segreto.",
   "mn21:13.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi.",
-  "mn21:13.12": "Se succede, dovete allenarvi così:"
+  "mn21:13.12": "Se succede, dovete allenarvi così:",
+  "mn21:13.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto."
 }
