--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -149,5 +149,6 @@
   "mn21:13.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente come la terra a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’",
   "mn21:13.15": "Dovete allenarvi così.",
   "mn21:14.1": "Immaginate una persona che arriva con della tintura come della lacca rossa, curcuma, indaco, o robbia rosa,",
-  "mn21:14.2": "e dice:"
+  "mn21:14.2": "e dice:",
+  "mn21:14.3": "‘Adesso faccio dei dipinti nel cielo, faccio in modo che dei dipinti appaiano lì.’"
 }
