--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -61,5 +61,6 @@
   "mn22:7.9": "Interrogherò i mendicati riguardo a questo.”",
   "mn22:8.1": "Allora il Buddha disse ai mendicanti:",
   "mn22:8.2": "“Mendicanti, voi capite il mio insegnamento come Ariṭṭha, che mi rappresenta male a causa della propria comprensione errata, crea danno a sé stesso, e accumula molto karma negativo?”",
-  "mn22:8.3": "“No, Signore."
+  "mn22:8.3": "“No, Signore.",
+  "mn22:8.4": "Poiché il Buddha ha detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie."
 }
