--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -65,5 +65,5 @@
   "mn22:8.4": "Poiché il Buddha ha detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie.",
   "mn22:8.6": "Il Buddha ha detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
   "mn22:8.7": "Con la similitudine dello scheletro …",
-  "mn22:8.8": "della testa di serpente, il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.”"
+  "mn22:8.8": "della testa di serpente, il Buddha ha detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.”"
 }
